--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "jupyterlab>=4.4.9",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.31",
+    "langchain-openai>=0.3.35",
     "langgraph>=0.6.10",
+    "rich>=14.2.0",
+    "volcengine>=1.0.201",
 ]
